# mesos-module-flocker

./: CMakeLists.txt  README.md  flocker-isolator.json  modules.json
cmake-modules/: FindMesos.cmake
docker/mesos-modules-dev/: Dockerfile
isolator/: CMakeLists.txt  flocker-isolator.hpp  flocker_isolator.cpp  test_flocker_isolator.cpp
libisolator/: CMakeLists.txt  FlockerEnvironmentalVariables.cpp  FlockerEnvironmentalVariables.h  IpUtils.cpp  IpUtils.hpp  flocker-isolator.hpp  flocker_control_service_client.cpp  flocker_control_service_client.hpp  flocker_isolator.cpp
test/: CMakeLists.txt
test/testflockerisolator/: CMakeLists.txt  mock_flocker_control_service_client.hpp  test_flocker_isolator.cpp  test_flocker_isolator.hpp
